*Empty MediaWiki Message*

--- a/Azaɣar_(Tizi_Wezzu).mw
+++ b/Azaɣar_(Tizi_Wezzu).mw
@@ -1,5 +1,5 @@
 {{Databox}}
-'''Azaɣar''' (neɣ Ɛin Zawiya), d yiwet [[taɣiwant n Tmurt Taqbaylit|taɣiwant]] n [[tawilayt n Tizi Wezzu|twilayt n Tizi Wezzu]] di [[Tamurt Taqbaylit|Tmurt Taqbaylit]], tella ar {{Aferdis|45|km}} deg unẓul-amalu n [[Tizi Uzzu]] dɣa ar {{Aferdis|115|km}} deg unẓul-agmuḍ n [[Zzayer]].
+'''Azaɣar''' (neɣ Ɛin Zawiya), d yiwet [[taɣiwant n Tmurt Taqbaylit|taɣiwant]] n [[tawilayt n Tizi Wezzu|twilayt n Tizi Wezzu]] di [[Tamurt Taqbaylit|Tmurt Taqbaylit]], tella ar {{Aferdis|45|km}} deg unẓul-amalu n [[Tizi Wezzu]] dɣa ar {{Aferdis|115|km}} deg unẓul-agmuḍ n [[Lezzayer]].
 
 
 === Asideg (timella) ===
@@ -20,7 +20,7 @@ Taɣiwant n Uzaɣar tella deg unẓul-amalu n twilayt n Tizi Uzzu.
 
 === Idurar ===
 
-Taɣiwant n Uzaɣar tesɛa 29 tudrin<ref>[http://www.joradp.dz/HFR/Index.htm Aɣmis unṣib n Tagduda Tazzayrit], 19 dujamber 1984. Tanaḍt n° 84-365, yettsbeḍen tasuddest ines. Tawilayt n Tizi Uzzu, p. 1504 à 1510.</ref> :
+Taɣiwant n Uzaɣar tesɛa 29 tudrin<ref>[http://www.joradp.dz/HFR/Index.htm Aɣmis unṣib n Tagduda Tazzayrit], 19 dujamber 1984. Tanaḍt n° 84-365, yettsbeḍen tasuddest ines. Tawilayt n Tizi Wezzu, p. 1504 à 1510.</ref> :
 {{début de colonnes|taille=10}}
 * Azaɣar
 * Adebbaɣ
@@ -55,7 +55,7 @@ Taɣiwant n Uzaɣar tesɛa 29 tudrin<ref>[http://www.joradp.dz/HFR/Index.htm Aɣ
 {{fin de colonnes}}
 
 == Amezruy ==
-Deg useggas [[1889]], imi tella tasehrest taṛumit, semman-as i taɣiwant '''Pirette''' dɣa tella deg [[Igezda iṛumiyen n Lezzayer|ugezdu n Zzayer]]<ref name="Atlas">
+Deg useggas [[1889]], imi tella tasehrest taṛumit, semman-as i taɣiwant '''Pirette''' dɣa tella deg [[Igezda iṛumiyen n Lezzayer|ugezdu n Lezzayer]]<ref name="Atlas">
 {{Cite journal
  | title = Atlas n Lezzayer 1830-1960 
  | publisher = Tiẓrigin Taṛcibin & Idles
@@ -69,7 +69,7 @@ S tanaḍt deg uzmez n 7 meɣres 1889, isem n Pirette yettwefkad i ulemmas n ume
 == Tadamsa ==
 Taɣiwant tesɛa ɣef akal-is taneɣraft n imra akkw d imagraden iɣurbizen, taneɣraft n tigazuzin, taneɣraft n chewing-gum, daɣen aṭas iferdisen n aɣraf n ifexxaren dɣa tissirt n zzit d irden.
 
-Uggug imeswi, yettwabnun deg iseggwasen 1980 deg unẓul n tɣiwant, yesniref taneflit n tafellaḥt.
+Uggug imeswi, yettwabnun deg iseggasen 1980 deg unẓul n tɣiwant, yesniref taneflit n tafellaḥt.
 
 == Ẓeṛ daɣen ==
 * [[Tawilayt n Tizi Uzzu]]
