*Empty MediaWiki Message*

--- a/Abuferriw.mw
+++ b/Abuferriw.mw
@@ -1,6 +1,10 @@
 {{Automatic taxobox}}
 '''Abuferriw''' neɣ '''Tawacult n ibuferriwen''' ('''[[Assaɣ ussnan]]''': ''Paridae'') d [[tawacult (tasnudert)|tawacult]] n [[agṭiṭ|igṭaṭ]] yettidiren deg [[Amadal amzikan|umadal amzikan]] d [[Tamrikt n Ugafa|Marikan n Ugafa]], Abuferriw d aylal meẓẓiyen anda [[ableɣ|ableɣ-is]] yettili gar n 10 cm ar 22 cm, Aṭas deg telmas n twacult-a ttidiren zdat n [[afgan|imdanen]] anda ttafen učči-nsen am [[ifes|yifsan]] 
 
+=== isem ===
+Ass-a deg [[Iqbayliyen|tmetti Taqbaylit]] aylal-a (Abuferriw) yettwassnen s yisem n '''Abuḥeddad''' maca deg tidet isem-a yekka-d seg tutlayt [[Taɛrabt|Taserɣint]] (طائر الحداد) 
+== Aglam ==
+Anagar tiwsitin tiynelmasin, yakk [[talmest|tilmas]] n ubuferriw d tid yettemcabin s waṭas deg talɣa, Dɣa tawacult-a yettwassnen d akken d tawacult anda yettemcabin igmamen-is (tias-is) akk, Teɣzi tagejdant n telmas n ubuferriw yettili gar n 10 ar 16 cm yakk d 9 ar 21 cm i [[tawsit (tudersent)|tewsitin]] tiynelmasin ma d [[azuk]] yettili gar n 7 ar 29 g yakk d 5 ar 49 g i tewsitin tiynelmasin 
 == Ẓeṛ daɣen ==
 * [[Amenferriw]]
 * [[Aylal]]
