--- a/Abuferriw.mw
+++ b/Abuferriw.mw
@@ -13,6 +13,12 @@ Aqamum n ubuferriw meẓẓiy maca llan wid ihrawen d wid sdiden (rqiqen) s unec
 Abuferriw d [[aylal]] yettidiren deg waṭas n yidgan n umadal anda yettidir deg umur ameqran n [[amenẓaw|imenẓawen]] n [[Turuft|Uruppa]] d [[Asya]] d [[Tafriqt|Tefriqt]] d [[Tamrikt n Ugafa|Marikan n Ugafa]], Ula di [[Tamurt n Leqbayel|tmurt n Iqbayliyen]] llant kra n telmas am [[Tamzilt|ubuferriw azegzaw]] 
 
 == Tilmas ==
+S unect n usismel n umnir (alqem 5.2, 2015) n [[aswir amesnaylal agreɣlan|uswir amesnaylal agreɣlan]] 
+* [[Abuferriw bucentuf]] ''Baeolophus'' (5 n telmas)
+* [[Cephalopyrus]] (1 n telmest)
+* [[Abuferzegzaw]] ''Cyanistes'' (3 n telmas)
+* [[Abuferisk]] ''Lophophanes'' (2 n telmas) 
+* [[
 
 == Ẓeṛ daɣen ==
 * [[Amenferriw]]
