*Empty MediaWiki Message*

--- a/Abuferriw.mw
+++ b/Abuferriw.mw
@@ -1,16 +1,16 @@
 {{Automatic taxobox}}
-'''Abuferriw''' neɣ '''Tawacult n ibuferriwen''' ('''[[Assaɣ ussnan]]''': ''Paridae'') d [[tawacult (tasnudert)|tawacult]] n [[agṭiṭ|igṭaṭ]] yettidiren deg [[Amadal amzikan|umadal amzikan]] d [[Tamrikt n Ugafa|Marikan n Ugafa]], Abuferriw d aylal meẓẓiyen anda [[ableɣ|ableɣ-is]] yettili gar n 10 cm ar 22 cm, Aṭas deg telmas n twacult-a ttidiren zdat n [[afgan|imdanen]] anda ttafen učči-nsen am [[ifes|yifsan]] 
+'''Abuferriw''' neɣ '''Tawacult n ibuferriwen''' ('''[[Assaɣ ussnan]]''': ''Paridae'') d [[tawacult (tasnudert)|tawacult]] n [[agṭiṭ|igṭaṭ]] yettidiren deg [[Amadal amzikan|umadal amzikan]] d [[Tamrikt n Ugafa|Marikan n Ugafa]], Abuferriw d aylal meẓẓiyen anda [[ableɣ|ableɣ-is]] yettili gar n 10 cm ar 22 cm, Aṭas deg telmas n twacult-a ttidiren zdat n [[afgan|imdanen]] anda ttafen učči-nsen am [[ifes|yifsan]]. 
 
 === isem ===
-Ass-a deg [[Iqbayliyen|tmetti Taqbaylit]] aylal-a (Abuferriw) yettwassnen s yisem n '''Abuḥeddad''' maca deg tidet isem-a yekka-d seg tutlayt [[Taɛrabt|Taserɣint]] (طائر الحداد) 
+Ass-a deg [[Iqbayliyen|tmetti Taqbaylit]] aylal-a (Abuferriw) yettwassnen s yisem n '''Abuḥeddad''' maca deg tidet isem-a yekka-d seg tutlayt [[Taɛrabt]] (طائر الحداد). 
 == Aglam ==
-Anagar tiwsitin tiynelmasin, yakk [[talmest|tilmas]] n ubuferriw d tid yettemcabin s waṭas deg talɣa, Dɣa tawacult-a yettwassnen d akken d tawacult anda yettemcabin igmamen-is (tias-is) akk, Teɣzi tagejdant n telmas n ubuferriw yettili gar n 10 ar 16 cm yakk d 9 ar 21 cm i [[tawsit (tudersent)|tewsitin]] tiynelmasin ma d [[azuk]] yettili gar n 7 ar 29 g yakk d 5 ar 49 g i tewsitin tiynelmasin, S umata ifurken igejdanen n ubuferriw ttaken-d seg yiniten yemgaraden n [[Afraw|wafrawen-is]] 
+Anagar tiwsitin tiynelmasin, yakk [[talmest|tilmas]] n ubuferriw d tid yettemcabin s waṭas deg talɣa, Dɣa tawacult-a yettwassnen d akken d tawacult anda yettemcabin igmamen-is (tias-is) akk, Teɣzi tagejdant n telmas n ubuferriw yettili gar n 10 ar 16 cm yakk d 9 ar 21 cm i [[tawsit (tudersent)|tewsitin]] tiynelmasin ma d [[azuk]] yettili gar n 7 ar 29 g yakk d 5 ar 49 g i tewsitin tiynelmasin, S umata ifurken igejdanen n ubuferriw ttaken-d seg yiniten yemgaraden n [[Afraw|wafrawen-is]]. 
 
 '''[[Aqamum]]''' <br/>
-Aqamum n ubuferriw meẓẓiy maca llan wid ihrawen d wid sdiden (rqiqen) s unect (ɛla ḥsab) n wučči ɣef wacu yegguni, Acku tilmas iy tetten [[aburɣas|iburɣas]] lant (sɛant) iqamumen sdiden, ma d tilmas iy tetten ifsan iqamumen-nsent zhur-it
+Aqamum n ubuferriw meẓẓiy maca llan wid ihrawen d wid sdiden (rqiqen) s unect (ɛla ḥsab) n wučči ɣef wacu yegguni, Acku tilmas iy tetten [[aburɣas|iburɣas]] lant (sɛant) iqamumen sdiden, ma d tilmas iy tetten ifsan iqamumen-nsent zhur-it.
 
 == Idgan n tudert ==
-Abuferriw d [[aylal]] yettidiren deg waṭas n yidgan n umadal anda yettidir deg umur ameqran n [[amenẓaw|imenẓawen]] n [[Turuft|Uruppa]] d [[Asya]] d [[Tafriqt|Tefriqt]] d [[Tamrikt n Ugafa|Marikan n Ugafa]], Ula di [[Tamurt n Leqbayel|tmurt n Iqbayliyen]] llant kra n telmas am [[Tamzilt|ubuferriw azegzaw]] 
+Abuferriw d [[aylal]] yettidiren deg waṭas n yidgan n umadal anda yettidir deg umur ameqran n [[amenẓaw|imenẓawen]] n [[Turuft|Uruppa]] d [[Asya]] d [[Tafriqt|Tefriqt]] d [[Tamrikt n Ugafa|Marikan n Ugafa]], Ula di [[Tamurt n Leqbayel|tmurt n Iqbayliyen]] llant kra n telmas am [[Tamzilt|ubuferriw azegzaw]]. 
 
 == Tilmas ==
 S unect n usismel n umnir (alqem 5.2, 2015) n [[aswir amesnaylal agreɣlan|uswir amesnaylal agreɣlan]] 
@@ -18,7 +18,6 @@ S unect n usismel n umnir (alqem 5.2, 2015) n [[aswir amesnaylal agreɣlan|uswir
 * [[Cephalopyrus]] (1 n telmest)
 * [[Abuferzegzaw]] ''Cyanistes'' (3 n telmas)
 * [[Abuferisk]] ''Lophophanes'' (2 n telmas) 
-* [[
 
 == Ẓeṛ daɣen ==
 * [[Amenferriw]]
