*Empty MediaWiki Message*

--- a/Fudelɣum.mw
+++ b/Fudelɣum.mw
@@ -1,5 +1,7 @@
 {{Databox}}
-'''Tirizwa''' neɣ '''iles ufunas''' neɣ '''iles wezger''' neɣ '''Ccix n lebqul''', ([[isem usnan]]: ''Borago officinalis'') d yiwet n [[talmest|telmest]] n [[imɣan|yemɣan]] yeṭṭafaren [[tawsitn]] [[Tarizwant]] ilan (isɛan) [[aǧeǧǧig|iǧeǧǧigen]] d [[Azegzaw|izegzawen]] rewsen (temcabin) iw[[anayna|nayna]].
+'''Tirizwa''' neɣ '''iles ufunas'''  ([[Assaɣ ussnan]]: ''Borago'') d yiwet n [[tawsit (tudersent)|tewsit]] n [[imɣan|yemɣan]] yeṭṭafaren [[tawacult (tasnudert)|tawacult]] [[Tarizwant]] ilan (isɛan) [[aǧeǧǧig|iǧeǧǧigen]] d [[Azegzaw|izegzawen]] rewsen (temcabin) iw[[anayna|nayna]].
+
+== Umuɣ n telmas ==
 
 [[Tugna:Ccix lebqul IMG 9519 1.jpg|thumb|Ccix n lebqul - Borago officinalis]]
 [[Tugna:Ccix lebqul IMG 8250 2.jpg|thumb|Ccix n lebqul - Borago officinalis]]
