*Empty MediaWiki Message*

--- a/Tilkit_n_wuccen.mw
+++ b/Tilkit_n_wuccen.mw
@@ -1,5 +1,5 @@
 {{Automatic taxobox}}
-'''Tilkit n wuccen''' ([[Assaɣ ussnan]]: ''Anchusa azurea'') d yiwet n [[talmest|telmest]] [[imɣan|tamɣawt]] yeṭṭafaren [[tawacult (tasnudert)|tawacult]] n [[Tarozwant|trizwant]] 
+'''Tilkit n wuccen''' ([[Assaɣ ussnan]]: ''Anchusa azurea'') d yiwet n [[talmest|telmest]] [[imɣan|tamɣawt]] yeṭṭafaren [[tawsit (tudersent)|tawsit]] n [[iles wezger|yiles wezger]] deg [[tawacult (tasnudert)|twacult]] n [[Tarozwant|trizwant]] 
 
 == Idgan n wemɣay ==
 
