*Empty MediaWiki Message*

--- a/Tilkit_n_wuccen.mw
+++ b/Tilkit_n_wuccen.mw
@@ -2,6 +2,7 @@
 '''Tilkit n wuccen''' ([[Assaɣ ussnan]]: ''Anchusa azurea'') d yiwet n [[talmest|telmest]] [[imɣan|tamɣawt]] yeṭṭafaren [[tawsit (tudersent)|tawsit]] n [[iles wezger|yiles wezger]] deg [[tawacult (tasnudert)|twacult]] n [[Tarozwant|trizwant]] 
 
 == Idgan n wemɣay ==
+Talmest-a tettemɣay-d deg [[Turuft|Uruppa]] d tamiwin yezzin neɣ yudsen i [[ilel agrakal|yilel agrakal]]
 
 == Ẓeṛ daɣen ==
 * [[Tirizwa]]
