*Empty MediaWiki Message*

--- a/4_yennayer.mw
+++ b/4_yennayer.mw
@@ -7,9 +7,7 @@ Ass n 4 yennayer d ass {{exp|wis}}4 n useggas. Llan 361 wussan deffir-s ar tagga
 |commons=Category:4 january
 |commons azwel=4 yennayer
 }}
-{{Ass asental}}
-
-{{Agni Izemzan}}
+{{Months}}
 
 
 [[Taggayt:Ass n yennayer]]
