*Empty MediaWiki Message*

--- a/5_yennayer.mw
+++ b/5_yennayer.mw
@@ -7,9 +7,7 @@ Ass n 5 yennayer d ass {{exp|wis}}5 n useggas. Llan 360 wussan deffir-s ar tagga
 |commons=Category:5 january
 |commons azwel=5 yennayer
 }}
-{{Ass asental}}
-
-{{Agni Izemzan}}
+{{Months}}
 
 
 [[Taggayt:Ass n yennayer]]
