*Empty MediaWiki Message*

--- a/6_yennayer.mw
+++ b/6_yennayer.mw
@@ -8,9 +8,7 @@ Ass n 6 yennayer d ass {{exp|wis}}6 n useggas. Llan 359 wussan deffir-s ar tagga
 |commons=Category:6 january
 |commons azwel=6 yennayer
 }}
-{{Ass asental}}
-
-{{Agni Izemzan}}
+{{Months}}
 
 
 [[Taggayt:Ass n yennayer]]
