*Empty MediaWiki Message*

--- a/7_yennayer.mw
+++ b/7_yennayer.mw
@@ -7,9 +7,7 @@ Ass n 7 yennayer d ass {{exp|wis}}7 n useggas. Llan 358 wussan deffir-s ar tagga
 |commons=Category:7 january
 |commons azwel=7 yennayer
 }}
-{{Ass asental}}
-
-{{Agni Izemzan}}
+{{Months}}
 
 
 [[Taggayt:Ass n yennayer]]
