*Empty MediaWiki Message*

--- a/8_yennayer.mw
+++ b/8_yennayer.mw
@@ -7,9 +7,7 @@ Ass n 8 yennayer d ass {{exp|wis}}8 n useggas. Llan 357 n wussan deffir-s ar tag
 |commons=Category:8 january
 |commons azwel=8 yennayer
 }}
-{{Ass asental}}
-
-{{Agni Izemzan}}
+{{Months}}
 
 
 [[Taggayt:Ass n yennayer]]
