*Empty MediaWiki Message*

--- a/9_yennayer.mw
+++ b/9_yennayer.mw
@@ -1,5 +1,5 @@
 {{Yennayer}}
-Ass n 9 yennayer d ass {{exp|wis}}9 n useggas. Llan 356 wussan deffir-s ar taggara n useggas, {{exp|wis}}357 deg iseggasen ''bisekstil''.
+Ass n 9 yennayer d ass wis 9 n useggas. Llan 356 wussan deffir-s ar taggara n useggas, wis 357 deg iseggasen ''bisekstil''.
 <center>[[8 yennayer]] - ''9 yennayer'' - [[10 yennayer]]</center>
 
 == Imagraden iqqenen ==
@@ -7,9 +7,8 @@ Ass n 9 yennayer d ass {{exp|wis}}9 n useggas. Llan 356 wussan deffir-s ar tagga
 |commons=Category:9 january
 |commons azwel=9 yennayer
 }}
-{{Ass asental}}
 
-{{Agni Izemzan}}
+{{Months}}
 
 
 [[Taggayt:Ass n yennayer]]
