*Empty MediaWiki Message*

--- a/10_yennayer.mw
+++ b/10_yennayer.mw
@@ -1,5 +1,5 @@
 {{Yennayer}}
-Ass n 10 yennayer d ass {{exp|wis}}10 n useggas. Llan 355 wussan deffir-s ar taggara n useggas, {{exp|wis}}356 deg iseggasen ''bisekstil''.
+Ass n 10 yennayer d ass wis 10 n useggas. Llan 355 wussan deffir-s ar taggara n useggas, wis 356 deg iseggasen ''bisekstil''.
 <center>[[9 yennayer]] - ''10 yennayer'' - [[11 yennayer]]</center>
 
 == Imagraden iqqenen ==
@@ -7,9 +7,7 @@ Ass n 10 yennayer d ass {{exp|wis}}10 n useggas. Llan 355 wussan deffir-s ar tag
 |commons=Category:10 january
 |commons azwel=10 yennayer
 }}
-{{Ass asental}}
-
-{{Agni Izemzan}}
+{{Months}}
 
 
 [[Taggayt:Ass n yennayer]]
