*Empty MediaWiki Message*

--- a/5_yennayer.mw
+++ b/5_yennayer.mw
@@ -1,5 +1,5 @@
 {{Yennayer}}
-Ass n 5 yennayer d ass {{exp|wis}}5 n useggas. Llan 360 wussan deffir-s ar taggara n useggas, {{exp|wis}}361 deg iseggasen ''bisekstil''.
+Ass n 5 yennayer d ass wis 5 n useggas. Llan 360 wussan deffir-s ar taggara n useggas, wis 361 deg iseggasen ''bisekstil''.
 <center>[[4 yennayer]] - ''5 yennayer'' - [[6 yennayer]]</center>
 
 == Imagraden iqqenen ==
