--- a/12_yennayer.mw
+++ b/12_yennayer.mw
@@ -1,5 +1,5 @@
 {{Yennayer}}
-Ass n 12 yennayer d ass {{exp|wis}}12 n useggas. Llan 353 wussan deffir-s ar taggara n useggas, {{exp|wis}}354 deg iseggasen ''bisekstil''.
+Ass n 12 yennayer d ass wis 12 n useggas. Llan 353 wussan deffir-s ar taggara n useggas, wis 354 deg iseggasen ''bisekstil''.
 <center>[[11 yennayer]] - ''12 yennayer'' - [[13 yennayer]]</center>
 
 == Imagraden iqqenen ==
@@ -7,9 +7,7 @@ Ass n 12 yennayer d ass {{exp|wis}}12 n useggas. Llan 353 wussan deffir-s ar tag
 |commons=Category:12 january
 |commons azwel=12 yennayer
 }}
-{{Ass asental}}
-
-{{Agni Izemzan}}
+{{Months}}
 
 
 [[Taggayt:Ass n yennayer]]
