*Empty MediaWiki Message*

--- a/13_yennayer.mw
+++ b/13_yennayer.mw
@@ -1,5 +1,5 @@
 {{Yennayer}}
-Ass n 13 yennayer d ass {{exp|wis}}13 n useggas. Llan 352 wussan deffir-s ar taggara n useggas, {{exp|wis}}353 deg iseggasen ''bisekstil''.
+Ass n 13 yennayer d ass wis 13 n useggas. Llan 352 wussan deffir-s ar taggara n useggas, wis 353 deg iseggasen ''bisekstil''.
 <center>[[12 yennayer]] - ''13 yennayer'' - [[14 yennayer]]</center>
 
 ==Imagraden iqqenen==
@@ -7,9 +7,7 @@ Ass n 13 yennayer d ass {{exp|wis}}13 n useggas. Llan 352 wussan deffir-s ar tag
 |commons=Category:13 january
 |commons azwel=13 yennayer
 }}
-{{Ass asental}}
-
-{{Agni Izemzan}}
+{{Months}}
 
 
 [[Taggayt:Ass n yennayer]]
