*Empty MediaWiki Message*

--- a/14_yennayer.mw
+++ b/14_yennayer.mw
@@ -1,5 +1,5 @@
 {{Yennayer}}
-Ass n 14 yennayer d ass {{exp|wis}}14 n useggas. Llan 351 wussan deffir-s ar taggara n useggas, {{exp|wis}}352 deg iseggasen ''bisekstil''.
+Ass n 14 yennayer d ass wis 14 n useggas. Llan 351 wussan deffir-s ar taggara n useggas, wis 352 deg iseggasen ''bisekstil''.
 <center>[[13 yennayer]] - ''14 yennayer'' - [[15 yennayer]]</center>
 
 == Imagraden iqqenen ==
@@ -7,9 +7,6 @@ Ass n 14 yennayer d ass {{exp|wis}}14 n useggas. Llan 351 wussan deffir-s ar tag
 |commons=Category:14 january
 |commons azwel=14 yennayer
 }}
-{{Ass asental}}
-
-{{Agni Izemzan}}
-
+{{Months}}
 
 [[Taggayt:Ass n yennayer]]
