--- a/15_yennayer.mw
+++ b/15_yennayer.mw
@@ -1,5 +1,5 @@
 {{Yennayer}}
-Ass n 15 yennayer d ass {{exp|wis}}15 n useggas. Llan 350 wussan deffir-s ar taggara n useggas, {{exp|wis}}351 deg iseggasen ''bisekstil''.
+Ass n 15 yennayer d ass wis 15 n useggas. Llan 350 wussan deffir-s ar taggara n useggas, wis 351 deg iseggasen ''bisekstil''.
 <center>[[14 yennayer]] - ''15 yennayer'' - [[16 yennayer]]</center>
 
 == Imagraden iqqenen ==
@@ -7,9 +7,7 @@ Ass n 15 yennayer d ass {{exp|wis}}15 n useggas. Llan 350 wussan deffir-s ar tag
 |commons=Category:15 january
 |commons azwel=15 yennayer
 }}
-{{Ass asental}}
-
-{{Agni Izemzan}}
+{{Months}}
 
 
 [[Taggayt:Ass n yennayer]]
