*Empty MediaWiki Message*

--- a/16_yennayer.mw
+++ b/16_yennayer.mw
@@ -1,5 +1,5 @@
 {{Yennayer}}
-Ass n 16 yennayer d ass {{exp|wis}}16 n useggas. Llan 349 wussan deffir-s ar taggara n useggas, {{exp|wis}}350 deg iseggasen ''bisekstil''.
+Ass n 16 yennayer d ass wis 16 n useggas. Llan 349 wussan deffir-s ar taggara n useggas, wis 350 deg iseggasen ''bisekstil''.
 <center>[[15 yennayer]] - ''16 yennayer'' - [[17 yennayer]]</center>
 
 == Imagraden iqqenen ==
@@ -7,9 +7,6 @@ Ass n 16 yennayer d ass {{exp|wis}}16 n useggas. Llan 349 wussan deffir-s ar tag
 |commons=Category:16 january
 |commons azwel=16 yennayer
 }}
-{{Ass asental}}
-
-{{Agni Izemzan}}
-
+{{Months}}
 
 [[Taggayt:Ass n yennayer]]
