*Empty MediaWiki Message*

--- a/18_yennayer.mw
+++ b/18_yennayer.mw
@@ -1,5 +1,5 @@
 {{Yennayer}}
-Ass n 18 yennayer d ass {{exp|wis}}18 n useggas. Llan 347 wussan deffir-s ar taggara n useggas, {{exp|wis}}348 deg iseggasen ''bisekstil''.
+Ass n 18 yennayer d ass wis 18 n useggas. Llan 347 wussan deffir-s ar taggara n useggas, wis 348 deg iseggasen ''bisekstil''.
 <center>[[17 yennayer]] - ''18 yennayer'' - [[19 yennayer]]</center>
 
 == Imagraden iqqenen ==
@@ -7,9 +7,7 @@ Ass n 18 yennayer d ass {{exp|wis}}18 n useggas. Llan 347 wussan deffir-s ar tag
 |commons=Category:18 january
 |commons azwel=18 yennayer
 }}
-{{Ass asental}}
-
-{{Agni Izemzan}}
+{{Months}}
 
 
 [[Taggayt:Ass n yennayer]]
