--- a/19_yennayer.mw
+++ b/19_yennayer.mw
@@ -1,5 +1,5 @@
 {{Yennayer}}
-Ass n 19 yennayer d ass {{exp|wis}}19 n useggas. Llan 346 wussan deffir-s ar taggara n useggas, {{exp|wis}}347 deg iseggasen ''bisekstil''.
+Ass n 19 yennayer d ass wis 19 n useggas. Llan 346 wussan deffir-s ar taggara n useggas, wis 347 deg iseggasen ''bisekstil''.
 <center>[[18 yennayer]] - ''19 yennayer'' - [[20 yennayer]]</center>
 
 == Imagraden iqqenen ==
@@ -7,9 +7,7 @@ Ass n 19 yennayer d ass {{exp|wis}}19 n useggas. Llan 346 wussan deffir-s ar tag
 |commons=Category:19 january
 |commons azwel=19 yennayer
 }}
-{{Ass asental}}
-
-{{Agni Izemzan}}
+{{Months}}
 
 
 [[Taggayt:Ass n yennayer]]
