*Empty MediaWiki Message*

--- a/20_yennayer.mw
+++ b/20_yennayer.mw
@@ -1,5 +1,5 @@
 {{Yennayer}}
-Ass n 20 yennayer d ass {{exp|wis}}20 n useggas. Llan 345 wussan deffir-s ar taggara n useggas, {{exp|wis}}346 deg iseggasen ''bisekstil''.
+Ass n 20 yennayer d ass wis 20 n useggas. Llan 345 wussan deffir-s ar taggara n useggas, wis 346 deg iseggasen ''bisekstil''.
 <center>[[19 yennayer]] - ''20 yennayer'' - [[21 yennayer]]</center>
 
 == Imagraden iqqenen ==
@@ -7,9 +7,7 @@ Ass n 20 yennayer d ass {{exp|wis}}20 n useggas. Llan 345 wussan deffir-s ar tag
 |commons=Category:20 january
 |commons azwel=20 yennayer
 }}
-{{Ass asental}}
-
-{{Agni Izemzan}}
+{{Months}}
 
 
 [[Taggayt:Ass n yennayer]]
