--- a/21_yennayer.mw
+++ b/21_yennayer.mw
@@ -1,5 +1,5 @@
 {{Yennayer}}
-Ass n 21 yennayer d ass {{exp|wis}}21 n useggas. Llan 344 wussan deffir-s ar taggara n useggas, {{exp|wis}}345 deg iseggasen ''bisekstil''.
+Ass n 21 yennayer d ass wis 21 n useggas. Llan 344 wussan deffir-s ar taggara n useggas, wis 345 deg iseggasen ''bisekstil''.
 <center>[[20 yennayer]] - ''21 yennayer'' - [[22 yennayer]]</center>
 
 == Imagraden iqqenen ==
@@ -7,9 +7,7 @@ Ass n 21 yennayer d ass {{exp|wis}}21 n useggas. Llan 344 wussan deffir-s ar tag
 |commons=Category:21 january
 |commons azwel=21 yennayer
 }}
-{{Ass asental}}
-
-{{Agni Izemzan}}
+{{Months}}
 
 
 [[Taggayt:Ass n yennayer]]
