*Empty MediaWiki Message*

--- a/22_yennayer.mw
+++ b/22_yennayer.mw
@@ -1,5 +1,5 @@
 {{Yennayer}}
-Ass n 22 yennayer d ass {{exp|wis}}22 n useggas. Llan 343 wussan deffir-s ar taggara n useggas, {{exp|wis}}344 deg iseggasen ''bisekstil''.
+Ass n 22 yennayer d ass wis 22 n useggas. Llan 343 wussan deffir-s ar taggara n useggas, wis 344 deg iseggasen ''bisekstil''.
 
 <center>[[21 yennayer]] - ''22 yennayer'' - [[23 yennayer]]</center>
 
@@ -8,9 +8,7 @@ Ass n 22 yennayer d ass {{exp|wis}}22 n useggas. Llan 343 wussan deffir-s ar tag
 |commons=Category:22 january
 |commons azwel=22 yennayer
 }}
-{{Ass asental}}
-
-{{Agni Izemzan}}
+{{Months}}
 
 
 [[Taggayt:Ass n yennayer]]
