*Empty MediaWiki Message*

--- a/23_yennayer.mw
+++ b/23_yennayer.mw
@@ -1,5 +1,5 @@
 {{Yennayer}}
-Ass n 23 yennayer d ass {{exp|wis}}23 n useggas. Llan 342 wussan deffir-s ar taggara n useggas, {{exp|wis}}343 deg iseggasen ''bisekstil''.
+Ass n 23 yennayer d ass wis 23 n useggas. Llan 342 wussan deffir-s ar taggara n useggas, wis 343 deg iseggasen ''bisekstil''.
 
 <center>[[22 yennayer]] - ''23 yennayer'' - [[24 yennayer]]</center>
 
@@ -8,9 +8,7 @@ Ass n 23 yennayer d ass {{exp|wis}}23 n useggas. Llan 342 wussan deffir-s ar tag
 |commons=Category:23 january
 |commons azwel=23 yennayer
 }}
-{{Ass asental}}
-
-{{Agni Izemzan}}
+{{Months}}
 
 
 [[Taggayt:Ass n yennayer]]
