*Empty MediaWiki Message*

--- a/24_yennayer.mw
+++ b/24_yennayer.mw
@@ -1,5 +1,5 @@
 {{Yennayer}}
-Ass n 24 yennayer d ass {{exp|wis}}24 n useggas. Llan 341 wussan deffir-s ar taggara n useggas, {{exp|wis}}342 deg iseggasen ''bisekstil''.
+Ass n 24 yennayer d ass wis 24 n useggas. Llan 341 wussan deffir-s ar taggara n useggas, wis 342 deg iseggasen ''bisekstil''.
 <center>[[23 yennayer]] - ''24 yennayer'' - [[25 yennayer]]</center>
 
 == Imagraden iqqenen ==
@@ -7,9 +7,7 @@ Ass n 24 yennayer d ass {{exp|wis}}24 n useggas. Llan 341 wussan deffir-s ar tag
 |commons=Category:24 january
 |commons azwel=24 yennayer
 }}
-{{Ass asental}}
-
-{{Agni Izemzan}}
+{{Months}}
 
 
 [[Taggayt:Ass n yennayer]]
