*Empty MediaWiki Message*

--- a/25_yennayer.mw
+++ b/25_yennayer.mw
@@ -1,5 +1,5 @@
 {{Yennayer}}
-Ass n 25 yennayer d ass {{exp|wis}}25 n useggas. Llan 340 wussan deffir-s ar taggara n useggas, {{exp|wis}}341 deg iseggasen ''bisekstil''.
+Ass n 25 yennayer d ass wis 25 n useggas. Llan 340 wussan deffir-s ar taggara n useggas, wis 341 deg iseggasen ''bisekstil''.
 <center>[[24 yennayer]] - ''25 yennayer'' - [[26 yennayer]]</center>
 
 == Imagraden iqqenen ==
@@ -7,9 +7,6 @@ Ass n 25 yennayer d ass {{exp|wis}}25 n useggas. Llan 340 wussan deffir-s ar tag
 |commons=Category:25 january
 |commons azwel=25 yennayer
 }}
-{{Ass asental}}
-
-{{Agni Izemzan}}
-
+{{Months}}
 
 [[Taggayt:Ass n yennayer]]
