*Empty MediaWiki Message*

--- a/26_yennayer.mw
+++ b/26_yennayer.mw
@@ -1,5 +1,5 @@
 {{Yennayer}}
-Ass n 26 yennayer d ass {{exp|wis}}26 n useggas. Llan 339 wussan deffir-s ar taggara n useggas, {{exp|wis}}340 deg iseggasen ''bisekstil''.
+Ass n 26 yennayer d ass wis 26 n useggas. Llan 339 wussan deffir-s ar taggara n useggas, wis 340 deg iseggasen ''bisekstil''.
 <center>[[25 yennayer]] - ''26 yennayer'' - [[27 yennayer]]</center>
 
 == Imagraden iqqenen ==
@@ -7,9 +7,7 @@ Ass n 26 yennayer d ass {{exp|wis}}26 n useggas. Llan 339 wussan deffir-s ar tag
 |commons=Category:26 january
 |commons azwel=26 yennayer
 }}
-{{Ass asental}}
-
-{{Agni Izemzan}}
+{{Months}}
 
 
 [[Taggayt:Ass n yennayer]]
