--- a/27_yennayer.mw
+++ b/27_yennayer.mw
@@ -1,5 +1,5 @@
 {{Yennayer}}
-Ass n 27 yennayer d ass {{exp|wis}}27 n useggas. Llan 338 wussan deffir-s ar taggara n useggas, {{exp|wis}}339 deg iseggasen ''bisekstil''.
+Ass n 27 yennayer d ass wis 27 n useggas. Llan 338 wussan deffir-s ar taggara n useggas, wis 339 deg iseggasen ''bisekstil''.
 <center>[[26 yennayer]] - ''27 yennayer'' - [[28 yennayer]]</center>
 
 == Imagraden iqqenen ==
@@ -7,9 +7,7 @@ Ass n 27 yennayer d ass {{exp|wis}}27 n useggas. Llan 338 wussan deffir-s ar tag
 |commons=Category:27 january
 |commons azwel=27 yennayer
 }}
-{{Ass asental}}
-
-{{Agni Izemzan}}
+{{Months}}
 
 
 [[Taggayt:Ass n yennayer]]
