*Empty MediaWiki Message*

--- a/28_yennayer.mw
+++ b/28_yennayer.mw
@@ -1,5 +1,5 @@
 {{Yennayer}}
-Ass n 28 yennayer d ass {{exp|wis}}28 n useggas. Llan 337 wussan deffir-s ar taggara n useggas, {{exp|wis}}338 deg iseggasen ''bisekstil''.
+Ass n 28 yennayer d ass wis 28 n useggas. Llan 337 wussan deffir-s ar taggara n useggas, wis 338 deg iseggasen ''bisekstil''.
 <center>[[27 yennayer]] - ''28 yennayer'' - [[29 yennayer]]</center>
 
 == Imagraden iqqenen ==
@@ -7,9 +7,7 @@ Ass n 28 yennayer d ass {{exp|wis}}28 n useggas. Llan 337 wussan deffir-s ar tag
 |commons=Category:28 january
 |commons azwel=28 yennayer
 }}
-{{Ass asental}}
-
-{{Agni Izemzan}}
+{{Months}}
 
 
 [[Taggayt:Ass n yennayer]]
