*Empty MediaWiki Message*

--- a/29_yennayer.mw
+++ b/29_yennayer.mw
@@ -1,5 +1,5 @@
 {{Yennayer}}
-Ass n 29 yennayer d ass {{exp|wis}}29 n useggas. Llan 336 wussan deffir-s ar taggara n useggas, {{exp|wis}}337 deg iseggasen ''bisekstil''.
+Ass n 29 yennayer d ass wis 29 n useggas. Llan 336 wussan deffir-s ar taggara n useggas, wis 337 deg iseggasen ''bisekstil''.
 <center>[[28 yennayer]] - ''29 yennayer'' - [[30 yennayer]]</center>
 
 == Imagraden iqqenen ==
@@ -7,9 +7,7 @@ Ass n 29 yennayer d ass {{exp|wis}}29 n useggas. Llan 336 wussan deffir-s ar tag
 |commons=Category:29 january
 |commons azwel=29 yennayer
 }}
-{{Ass asental}}
-
-{{Agni Izemzan}}
+{{Months}}
 
 
 [[Taggayt:Ass n yennayer]]
