*Empty MediaWiki Message*

--- a/30_yennayer.mw
+++ b/30_yennayer.mw
@@ -1,5 +1,5 @@
 {{Yennayer}}
-Ass n 30 yennayer d ass {{exp|wis}}30 n useggas. Llan 335 wussan deffir-s ar taggara n useggas, {{exp|wis}}336 deg iseggasen ''bisekstil''.
+Ass n 30 yennayer d ass wis 30 n useggas. Llan 335 wussan deffir-s ar taggara n useggas, wis 336 deg iseggasen ''bisekstil''.
 <center>[[29 yennayer]] - ''30 yennayer'' - [[31 yennayer]]</center>
 
 == Imagraden iqqenen ==
@@ -7,9 +7,7 @@ Ass n 30 yennayer d ass {{exp|wis}}30 n useggas. Llan 335 wussan deffir-s ar tag
 |commons=Category:30 january
 |commons azwel=30 yennayer
 }}
-{{Ass asental}}
-
-{{Agni Izemzan}}
+{{Months}}
 
 
 [[Taggayt:Ass n yennayer]]
