*Empty MediaWiki Message*

--- a/18_wamber.mw
+++ b/18_wamber.mw
@@ -1,5 +1,5 @@
 {{wamber}}
-Ass '''18 [[wamber]]''' d ass {{exp|wis}}322 n useggas ({{exp|wis}}323 deg iseggasen ''bisekstil''). Llan 43 wussan deffir-s ar taggara n useggas.
+Ass '''18 [[wamber]]''' d ass wis 322 n useggas (wis 323 deg iseggasen ''bisekstil''). Llan 43 wussan deffir-s ar taggara n useggas.
 <center>[[17 wamber]] - ''18 wamber'' - [[19 wamber]]</center>
 
 == Imagraden iqqenen ==
@@ -7,8 +7,7 @@ Ass '''18 [[wamber]]''' d ass {{exp|wis}}322 n useggas ({{exp|wis}}323 deg isegg
 |commons=Category:18 november
 |commons azwel=18 wamber
 }}
-{{Ass asental}}
-{{Agni Izemzan}}
+{{Months}}
 
 
 [[Taggayt:Ass n wamber]]
