--- a/15_meɣres.mw
+++ b/15_meɣres.mw
@@ -3,7 +3,7 @@ Ass n '''15 meɣres''' d [[ass]] wis 74 n [[Aseggas|useggas]] n [[tafada n grigu
 <center> [[14 meɣres]] - ''15 meɣres'' - [[16 meɣres]] </center>
 
 == Tidyanin ==
-=== Timiḍi Iru uq. S.-Ɛ. ===
+=== Timiḍi I uqbel Ɛisa ===
 * [[-44]]  : Aḍlib n [[Yulius Sayzar]].
 
 === Timiḍi wis 5===
