*Empty MediaWiki Message*

--- a/3_Dujamber.mw
+++ b/3_Dujamber.mw
@@ -1,5 +1,5 @@
 {{Dujamber}}
-Ass '''3 [[dujamber]]''' d ass {{exp|wis}}337 n useggas ({{exp|wis}}338 deg iseggasen ''bisekstil''). Llan 28 wussan deffir-Ɣs ar taggara n useggas.
+Ass '''3 [[dujamber]]''' d ass wis 337 n useggas (wis 338 deg iseggasen ''bisekstil''). Llan 28 wussan deffir-Ɣs ar taggara n useggas.
 <center>[[2 wamber]] - ''3 dujamber'' - [[4 dujamber]]</center>
 
 == Imagraden iqqenen ==
@@ -7,9 +7,7 @@ Ass '''3 [[dujamber]]''' d ass {{exp|wis}}337 n useggas ({{exp|wis}}338 deg iseg
 |commons=Category:3 december
 |commons azwel=3 dujamber
 }}
-{{Ass asental}}
-
-{{Agni Izemzan}}
+{{Months}}
 
 
 [[Taggayt:Ass n dujamber]]
