*Empty MediaWiki Message*

--- a/11_dujamber.mw
+++ b/11_dujamber.mw
@@ -1,5 +1,5 @@
 {{Dujamber}}
-Ass '''11 [[dujamber]]''' d ass {{exp|wis}}345 n useggas ({{exp|wis}}346 deg iseggasen ''bisekstil''). Llan 20 wussan deffir-s ar taggara n useggas.
+Ass '''11 [[dujamber]]''' d ass wis 345 n useggas (wis 346 deg iseggasen ''bisekstil''). Llan 20 wussan deffir-s ar taggara n useggas.
 <center>[[10 wamber]] - ''11 dujamber'' - [[12 dujamber]]</center>
 
 == Imagraden iqqenen ==
@@ -7,9 +7,7 @@ Ass '''11 [[dujamber]]''' d ass {{exp|wis}}345 n useggas ({{exp|wis}}346 deg ise
 |commons=Category:11 december
 |commons azwel=11 dujamber
 }}
-{{Ass asental}}
-
-{{Agni Izemzan}}
+{{Months}}
 
 
 [[Taggayt:Ass n dujamber]]
