*Empty MediaWiki Message*

--- a/11_dujamber.mw
+++ b/11_dujamber.mw
@@ -1,6 +1,6 @@
 {{Dujamber}}
 Ass '''11 [[dujamber]]''' d ass wis 345 n useggas (wis 346 deg iseggasen ''bisekstil''). Llan 20 wussan deffir-s ar taggara n useggas.
-<center>[[10 wamber]] - ''11 dujamber'' - [[12 dujamber]]</center>
+<center>[[10 dujamber]] - ''11 dujamber'' - [[12 dujamber]]</center>
 
 == Imagraden iqqenen ==
 {{Isenfaṛen nniḍen
