*Empty MediaWiki Message*

--- a/5_meɣres.mw
+++ b/5_meɣres.mw
@@ -1,5 +1,5 @@
 {{Meɣres}}
-Ass '''5 [[meɣres]]''' d ass {{exp|wis}}64 n useggas ({{exp|wis}}65 deg iseggasen ''bisekstil''). Llan 301 wussan deffir-es ar taggara n useggas.
+Ass '''5 [[meɣres]]''' d ass wis 64 n useggas (wis 65 deg iseggasen ''bisekstil''). Llan 301 wussan deffir-s ar taggara n useggas.
 
 == Tilaliyin ==
 === Timiḍi wis 21 ===
@@ -11,7 +11,5 @@ Ass '''5 [[meɣres]]''' d ass {{exp|wis}}64 n useggas ({{exp|wis}}65 deg iseggas
 |commons=Category:5 March
 |commons azwel=5 meɣres
 }}
-{{Ass asental}}
-{{Agni Izemzan}}
-
+{{Months}}
 [[Taggayt:Ass n meɣres]]
