*Empty MediaWiki Message*

--- a/14_dujamber.mw
+++ b/14_dujamber.mw
@@ -1,15 +1,13 @@
 {{Dujamber}}
-Ass '''14 [[dujamber]]''' d ass {{exp|wis}}348 n useggas ({{exp|wis}}349 deg iseggasen ''bisekstil''). Llan 17 wussan deffir-s ar taggara n useggas.
-<center>[[13 wamber]] - ''14 dujamber'' - [[15 dujamber]]</center>
+Ass '''14 [[dujamber]]''' d ass wis 348 n useggas (wis 349 deg iseggasen ''bisekstil''). Llan 17 wussan deffir-s ar taggara n useggas.
+<center>[[13 dujamber]] - ''14 dujamber'' - [[15 dujamber]]</center>
 
 == Imagraden iqqenen ==
 {{Isenfaṛen nniḍen
 |commons=Category:14 december
 |commons azwel=14 dujamber
 }}
-{{Ass asental}}
-
-{{Agni Izemzan}}
+{{Months}}
 
 
 [[Taggayt:Ass n dujamber]]
