*Empty MediaWiki Message*

--- a/15_dujamber.mw
+++ b/15_dujamber.mw
@@ -1,15 +1,13 @@
 {{Dujamber}}
-Ass '''15 [[dujamber]]''' d ass {{exp|wis}}349 n useggas ({{exp|wis}}350 deg iseggasen ''bisekstil''). Llan 16 wussan deffir-s ar taggara n useggas.
-<center>[[14 wamber]] - ''15 dujamber'' - [[16 dujamber]]</center>
+Ass '''15 [[dujamber]]''' d ass wis 349 n useggas (wis 350 deg iseggasen ''bisekstil''). Llan 16 wussan deffir-s ar taggara n useggas.
+<center>[[14 dujamber]] - ''15 dujamber'' - [[16 dujamber]]</center>
 
 == Imagraden iqqenen ==
 {{Isenfaṛen nniḍen
 |commons=Category:15 december
 |commons azwel=15 dujamber
 }}
-{{Ass asental}}
-
-{{Agni Izemzan}}
+{{Months}}
 
 
 [[Taggayt:Ass n dujamber]]
