*Empty MediaWiki Message*

--- a/16_dujamber.mw
+++ b/16_dujamber.mw
@@ -1,5 +1,5 @@
 {{Dujamber}}
-Ass '''16 [[dujamber]]''' d ass {{exp|wis}}350 n useggas ({{exp|wis}}351 deg iseggasen ''bisekstil''). Llan 15 wussan deffir-s ar taggara n useggas.
+Ass '''16 [[dujamber]]''' d ass wis 350 n useggas (wis 351 deg iseggasen ''bisekstil''). Llan 15 wussan deffir-s ar taggara n useggas.
 <center>[[15 wamber]] - ''16 dujamber'' - [[17 dujamber]]</center>
 
 == Imagraden iqqenen ==
@@ -7,8 +7,6 @@ Ass '''16 [[dujamber]]''' d ass {{exp|wis}}350 n useggas ({{exp|wis}}351 deg ise
 |commons=Category:16 december
 |commons azwel=16 dujamber
 }}
-{{Ass asental}}
-{{Agni Izemzan}}
-
+{{Months}}
 
 [[Taggayt:Ass n dujamber]]
