*Empty MediaWiki Message*

--- a/16_dujamber.mw
+++ b/16_dujamber.mw
@@ -1,6 +1,6 @@
 {{Dujamber}}
 Ass '''16 [[dujamber]]''' d ass wis 350 n useggas (wis 351 deg iseggasen ''bisekstil''). Llan 15 wussan deffir-s ar taggara n useggas.
-<center>[[15 wamber]] - ''16 dujamber'' - [[17 dujamber]]</center>
+<center>[[15 dujamber]] - ''16 dujamber'' - [[17 dujamber]]</center>
 
 == Imagraden iqqenen ==
 {{Isenfaṛen nniḍen
