--- a/17_dujamber.mw
+++ b/17_dujamber.mw
@@ -1,6 +1,6 @@
 {{Dujamber}}
-Ass '''17 [[dujamber]]''' d ass {{exp|wis}}351 n useggas ({{exp|wis}}352 deg iseggasen ''bisekstil''). Llan 14 wussan deffir-s ar taggara n useggas.
-<center>[[16 wamber]] - ''17 dujamber'' - [[18 dujamber]]</center>
+Ass '''17 [[dujamber]]''' d ass wis 351 n useggas (wis 352 deg iseggasen ''bisekstil''). Llan 14 wussan deffir-s ar taggara n useggas.
+<center>[[16 dujamber]] - ''17 dujamber'' - [[18 dujamber]]</center>
 
 == Tidyanin ==
 === Timiḍi wis 21 ===
@@ -12,8 +12,7 @@ Ass '''17 [[dujamber]]''' d ass {{exp|wis}}351 n useggas ({{exp|wis}}352 deg ise
 |commons=Category:17 december
 |commons azwel=17 dujamber
 }}
-{{Ass asental}}
-{{Agni Izemzan}}
+{{Months}}
 
 
 [[Taggayt:Ass n dujamber]]
