*Empty MediaWiki Message*

--- a/20_dujamber.mw
+++ b/20_dujamber.mw
@@ -1,13 +1,12 @@
 {{Dujamber}}
-Ass '''20 [[dujamber]]''' d ass {{exp|wis}}354 n useggas ({{exp|wis}}355 deg iseggasen ''bisekstil''). Llan 11 wussan deffir-s ar taggara n useggas.
-<center>[[19 wamber]] - ''20 dujamber'' - [[21 dujamber]]</center>
+Ass '''20 [[dujamber]]''' d ass wis 354 n useggas (wis 355 deg iseggasen ''bisekstil''). Llan 11 wussan deffir-s ar taggara n useggas.
+<center>[[19 dujamber]] - ''20 dujamber'' - [[21 dujamber]]</center>
 
 == Imagraden iqqenen ==
 {{Isenfaṛen nniḍen
 |commons=Category:20 december
 |commons azwel=20 dujamber
 }}
-{{Ass asental}}
-{{Agni Izemzan}}
+{{Months}}
 
 [[Taggayt:Ass n dujamber]]
