--- a/21_dujamber.mw
+++ b/21_dujamber.mw
@@ -1,5 +1,5 @@
 {{Dujamber}}
-Ass '''21 [[dujamber]]''' d ass {{exp|wis}}355 n useggas ({{exp|wis}}356 deg iseggasen ''bisekstil''). Llan 10 wussan deffir-s ar taggara n useggas.
+Ass '''21 [[dujamber]]''' d ass wis 355 n useggas (wis 356 deg iseggasen ''bisekstil''). Llan 10 wussan deffir-s ar taggara n useggas.
 <center>[[20 wamber]] - ''21 dujamber'' - [[22 dujamber]]</center>
 
 == Imagraden iqqenen ==
@@ -7,7 +7,6 @@ Ass '''21 [[dujamber]]''' d ass {{exp|wis}}355 n useggas ({{exp|wis}}356 deg ise
 |commons=Category:21 december
 |commons azwel=21 dujamber
 }}
-{{Ass asental}}
-{{Agni Izemzan}}
+{{Months}}
 
 [[Taggayt:Ass n dujamber]]
