*Empty MediaWiki Message*

--- a/21_dujamber.mw
+++ b/21_dujamber.mw
@@ -1,6 +1,6 @@
 {{Dujamber}}
 Ass '''21 [[dujamber]]''' d ass wis 355 n useggas (wis 356 deg iseggasen ''bisekstil''). Llan 10 wussan deffir-s ar taggara n useggas.
-<center>[[20 wamber]] - ''21 dujamber'' - [[22 dujamber]]</center>
+<center>[[20 dujamber]] - ''21 dujamber'' - [[22 dujamber]]</center>
 
 == Imagraden iqqenen ==
 {{Isenfaṛen nniḍen
