*Empty MediaWiki Message*

--- a/22_dujamber.mw
+++ b/22_dujamber.mw
@@ -1,8 +1,8 @@
 {{Dujamber}}
-Ass '''22 [[dujamber]]''' d ass {{exp|wis}}356 n useggas ({{exp|wis}}357 deg iseggasen ''bisekstil''). Llan 9 wussan deffir-es ar taggara n useggas.
-<center>[[21 wamber]] - ''22 dujamber'' - [[23 dujamber]]</center>
+Ass '''22 [[dujamber]]''' d ass wis 356 n useggas (wis 357 deg iseggasen ''bisekstil''). Llan 9 wussan deffir-s ar taggara n useggas.
+<center>[[21 dujamber]] - ''22 dujamber'' - [[23 dujamber]]</center>
 == Timettanin ==
-=== Timiḍi wisXXI ===
+=== Timiḍi wis XXI ===
 * [[2014]] : [[Joe Cocker]], acennay n rock d blues anglizi (° [[1944]]).
 
 == Imagraden iqqenen ==
@@ -10,8 +10,7 @@ Ass '''22 [[dujamber]]''' d ass {{exp|wis}}356 n useggas ({{exp|wis}}357 deg ise
 |commons=Category:22 december
 |commons azwel=22 dujamber
 }}
-{{Ass asental}}
-{{Agni Izemzan}}
+{{Months}}
 
 
 [[Taggayt:Ass n dujamber]]
