*Empty MediaWiki Message*

--- a/23_dujamber.mw
+++ b/23_dujamber.mw
@@ -1,14 +1,13 @@
 {{Dujamber}}
-Ass '''23 [[dujamber]]''' d ass {{exp|wis}}357 n useggas ({{exp|wis}}358 deg iseggasen ''bisekstil''). Llan 8 wussan deffir-s ar taggara n useggas.
-<center>[[22 wamber]] - ''23 dujamber'' - [[24 dujamber]]</center>
+Ass '''23 [[dujamber]]''' d ass wis 357 n useggas (wis 358 deg iseggasen ''bisekstil''). Llan 8 wussan deffir-s ar taggara n useggas.
+<center>[[22 dujamber]] - ''23 dujamber'' - [[24 dujamber]]</center>
 
 == Imagraden iqqenen ==
 {{Isenfaṛen nniḍen
 |commons=Category:23 december
 |commons azwel=23 dujamber
 }}
-{{Ass asental}}
-{{Agni Izemzan}}
+{{Months}}
 
 
 [[Taggayt:Ass n dujamber]]
