*Empty MediaWiki Message*

--- a/24_dujamber.mw
+++ b/24_dujamber.mw
@@ -1,14 +1,13 @@
 {{Dujamber}}
-Ass '''24 [[dujamber]]''' d ass {{exp|wis}}358 n useggas ({{exp|wis}}359 deg iseggasen ''bisekstil''). Llan 7 wussan deffir-es ar taggara n useggas.
-<center>[[23 wamber]] - ''24 dujamber'' - [[25 dujamber]]</center>
+Ass '''24 [[dujamber]]''' d ass wis 358 n useggas (wis 359 deg iseggasen ''bisekstil''). Llan 7 wussan deffir-s ar taggara n useggas.
+<center>[[23 dujamber]] - ''24 dujamber'' - [[25 dujamber]]</center>
 
 == Imagraden iqqenen ==
 {{Isenfaṛen nniḍen
 |commons=Category:24 december
 |commons azwel=24 dujamber
 }}
-{{Ass asental}}
-{{Agni Izemzan}}
+{{Months}}
 
 
 [[Taggayt:Ass n dujamber]]
