*Empty MediaWiki Message*

--- a/25_dujamber.mw
+++ b/25_dujamber.mw
@@ -1,14 +1,13 @@
 {{Dujamber}}
-Ass '''25 [[dujamber]]''' d ass {{exp|wis}}359 n useggas ({{exp|wis}}360 deg iseggasen ''bisekstil''). Llan 6 wussan deffir-s ar taggara n useggas.
-<center>[[24 wamber]] - ''25 dujamber'' - [[26 dujamber]]</center>
+Ass '''25 [[dujamber]]''' d ass wis 359 n useggas (wis 360 deg iseggasen ''bisekstil''). Llan 6 wussan deffir-s ar taggara n useggas.
+<center>[[24 dujamber]] - ''25 dujamber'' - [[26 dujamber]]</center>
 
 == Imagraden iqqenen ==
 {{Isenfaṛen nniḍen
 |commons=Category:25 december
 |commons azwel=25 dujamber
 }}
-{{Ass asental}}
-{{Agni Izemzan}}
+{{Months}}
 
 
 [[Taggayt:Ass n dujamber]]
