*Empty MediaWiki Message*

--- a/26_dujamber.mw
+++ b/26_dujamber.mw
@@ -1,14 +1,13 @@
 {{Dujamber}}
-Ass '''26 [[dujamber]]''' d ass {{exp|wis}}360 n useggas ({{exp|wis}}361 deg iseggasen ''bisekstil''). Llan 5 wussan deffir-s ar taggara n useggas.
-<center>[[25 wamber]] - ''26 dujamber'' - [[27 dujamber]]</center>
+Ass '''26 [[dujamber]]''' d ass wis 360 n useggas (wis 361 deg iseggasen ''bisekstil''). Llan 5 wussan deffir-s ar taggara n useggas.
+<center>[[25 dujamber]] - ''26 dujamber'' - [[27 dujamber]]</center>
 
 == Imagraden iqqenen ==
 {{Isenfaṛen nniḍen
 |commons=Category:26 december
 |commons azwel=26 dujamber
 }}
-{{Ass asental}}
-{{Agni Izemzan}}
+{{Months}}
 
 
 [[Taggayt:Ass n dujamber]]
