*Empty MediaWiki Message*

--- a/28_dujamber.mw
+++ b/28_dujamber.mw
@@ -1,14 +1,13 @@
 {{Dujamber}}
-Ass '''28 [[dujamber]]''' d ass {{exp|wis}}362 n useggas ({{exp|wis}}363 deg iseggasen ''bisekstil''). Llan 3 wussan deffir-s ar taggara n useggas.
-<center>[[27 wamber]] - ''28 dujamber'' - [[29 dujamber]]</center>
+Ass '''28 [[dujamber]]''' d ass wis 362 n useggas (wis 363 deg iseggasen ''bisekstil''). Llan 3 wussan deffir-s ar taggara n useggas.
+<center>[[27 dujamber]] - ''28 dujamber'' - [[29 dujamber]]</center>
 
 == Imagraden iqqenen ==
 {{Isenfaṛen nniḍen
 |commons=Category:28 december
 |commons azwel=28 dujamber
 }}
-{{Ass asental}}
-{{Agni Izemzan}}
+{{Months}}
 
 
 [[Taggayt:Ass n dujamber]]
