*Empty MediaWiki Message*

--- a/29_dujamber.mw
+++ b/29_dujamber.mw
@@ -1,14 +1,12 @@
 {{Dujamber}}
-Ass '''29 [[dujamber]]''' d ass {{exp|wis}}363 n useggas ({{exp|wis}}364 deg iseggasen ''bisekstil''). Llan 2 wussan deffir-s ar taggara n useggas.
-<center>[[28 wamber]] - ''29 dujamber'' - [[30 dujamber]]</center>
+Ass '''29 [[dujamber]]''' d ass wis 363 n useggas (wis 364 deg iseggasen ''bisekstil''). Llan 2 wussan deffir-s ar taggara n useggas.
+<center>[[28 dujamber]] - ''29 dujamber'' - [[30 dujamber]]</center>
 
 == Imagraden iqqenen ==
 {{Isenfaṛen nniḍen
 |commons=Category:29 december
 |commons azwel=29 dujamber
 }}
-{{Ass asental}}
-{{Agni Izemzan}}
-
+{{Months}}
 
 [[Taggayt:Ass n dujamber]]
