*Empty MediaWiki Message*

--- a/30_dujamber.mw
+++ b/30_dujamber.mw
@@ -1,14 +1,12 @@
 {{Dujamber}}
-Ass '''30 [[dujamber]]''' d ass {{exp|wis}}364 n useggas ({{exp|wis}}365 deg iseggasen ''bisekstil''). Yella 1 wass deffir-s ar taggara n useggas.
-<center>[[29 wamber]] - ''30 dujamber'' - [[31 dujamber]]</center>
+Ass '''30 [[dujamber]]''' d ass wis 364 n useggas (wis 365 deg iseggasen ''bisekstil''). Yella 1 wass deffir-s ar taggara n useggas.
+<center>[[29 dujamber]] - ''30 dujamber'' - [[31 dujamber]]</center>
 
 == Imagraden iqqenen ==
 {{Isenfaṛen nniḍen
 |commons=Category:30 december
 |commons azwel=30 dujamber
 }}
-{{Ass asental}}
-{{Agni Izemzan}}
-
+{{Months}}
 
 [[Taggayt:Ass n dujamber]]
