*Empty MediaWiki Message*

--- a/4_dujamber.mw
+++ b/4_dujamber.mw
@@ -1,14 +1,13 @@
 {{Dujamber}}
-Ass '''4 [[dujamber]]''' d ass {{exp|wis}}338 n useggas ({{exp|wis}}339 deg iseggasen ''bisekstil''). Llan 27 wussan deffir-es ar taggara n useggas.
-<center>[[3 wamber]] - ''4 dujamber'' - [[5 dujamber]]</center>
+Ass '''4 [[dujamber]]''' d ass wis 338 n useggas (wis 339 deg iseggasen ''bisekstil''). Llan 27 wussan deffir-s ar taggara n useggas.
+<center>[[3 dujamber]] - ''4 dujamber'' - [[5 dujamber]]</center>
 
 == Imagraden iqqenen ==
 {{Isenfaṛen nniḍen
 |commons=Category:4 december
 |commons azwel=4 dujamber
 }}
-{{Ass asental}}
-{{Agni Izemzan}}
+{{Months}}
 
 
 [[Taggayt:Ass n dujamber]]
