*Empty MediaWiki Message*

--- a/5_dujamber.mw
+++ b/5_dujamber.mw
@@ -1,14 +1,13 @@
 {{Dujamber}}
-Ass '''5 [[dujamber]]''' d ass {{exp|wis}}339 n useggas ({{exp|wis}}340 deg iseggasen ''bisekstil''). Llan 26 wussan deffir-s ar taggara n useggas.
-<center>[[4 wamber]] - ''5 dujamber'' - [[6 dujamber]]</center>
+Ass '''5 [[dujamber]]''' d ass wis 339 n useggas (wis 340 deg iseggasen ''bisekstil''). Llan 26 wussan deffir-s ar taggara n useggas.
+<center>[[4 dujamber]] - ''5 dujamber'' - [[6 dujamber]]</center>
 
 == Imagraden iqqenen ==
 {{Isenfaṛen nniḍen
 |commons=Category:5 december
 |commons azwel=5 dujamber
 }}
-{{Ass asental}}
-{{Agni Izemzan}}
+{{Months}}
 
 
 [[Taggayt:Ass n dujamber]]
