*Empty MediaWiki Message*

--- a/6_dujamber.mw
+++ b/6_dujamber.mw
@@ -1,5 +1,5 @@
 {{Dujamber}}
-Ass '''6 [[dujamber]]''' d ass {{exp|wis}}340 n useggas ({{exp|wis}}341 deg iseggasen ''bisekstil''). Llan 25 wussan deffir-s ar taggara n useggas.
+Ass '''6 [[dujamber]]''' d ass wis 340 n useggas (wis 341 deg iseggasen ''bisekstil''). Llan 25 wussan deffir-s ar taggara n useggas.
 <center>[[5 wamber]] - ''6 dujamber'' - [[7 dujamber]]</center>
 
 == Imagraden iqqenen ==
@@ -7,8 +7,6 @@ Ass '''6 [[dujamber]]''' d ass {{exp|wis}}340 n useggas ({{exp|wis}}341 deg iseg
 |commons=Category:6 december
 |commons azwel=6 dujamber
 }}
-{{Ass asental}}
-{{Agni Izemzan}}
-
+{{Months}}
 
 [[Taggayt:Ass n dujamber]]
