*Empty MediaWiki Message*

--- a/6_dujamber.mw
+++ b/6_dujamber.mw
@@ -1,6 +1,6 @@
 {{Dujamber}}
 Ass '''6 [[dujamber]]''' d ass wis 340 n useggas (wis 341 deg iseggasen ''bisekstil''). Llan 25 wussan deffir-s ar taggara n useggas.
-<center>[[5 wamber]] - ''6 dujamber'' - [[7 dujamber]]</center>
+<center>[[5 dujamber]] - ''6 dujamber'' - [[7 dujamber]]</center>
 
 == Imagraden iqqenen ==
 {{Isenfaṛen nniḍen
