--- a/7_dujamber.mw
+++ b/7_dujamber.mw
@@ -1,14 +1,13 @@
 {{Dujamber}}
-Ass '''7 [[dujamber]]''' d ass {{exp|wis}}341 n useggas ({{exp|wis}}342 deg iseggasen ''bisekstil''). Llan 24 wussan deffir-s ar taggara n useggas.
-<center>[[6 wamber]] - ''7 dujamber'' - [[8 dujamber]]</center>
+Ass '''7 [[dujamber]]''' d ass wis 341 n useggas (wis 342 deg iseggasen ''bisekstil''). Llan 24 wussan deffir-s ar taggara n useggas.
+<center>[[6 dujamber]] - ''7 dujamber'' - [[8 dujamber]]</center>
 
 == Imagraden iqqenen ==
 {{Isenfaṛen nniḍen
 |commons=Category:7 december
 |commons azwel=7 dujamber
 }}
-{{Ass asental}}
-{{Agni Izemzan}}
+{{Months}}
 
 
 [[Taggayt:Ass n dujamber]]
