*Empty MediaWiki Message*

--- a/8_dujamber.mw
+++ b/8_dujamber.mw
@@ -1,14 +1,13 @@
 {{Dujamber}}
-Ass '''8 [[dujamber]]''' d ass {{exp|wis}}342 n useggas ({{exp|wis}}343 deg iseggasen ''bisekstil''). Llan 23 wussan deffir-s ar taggara n useggas.
-<center>[[7 wamber]] - ''8 dujamber'' - [[9 dujamber]]</center>
+Ass '''8 [[dujamber]]''' d ass wis 342 n useggas (wis 343 deg iseggasen ''bisekstil''). Llan 23 wussan deffir-s ar taggara n useggas.
+<center>[[7 dujamber]] - ''8 dujamber'' - [[9 dujamber]]</center>
 
 == Imagraden iqqenen ==
 {{Isenfaṛen nniḍen
 |commons=Category:8 december
 |commons azwel=8 dujamber
 }}
-{{Ass asental}}
-{{Agni Izemzan}}
+{{Months}}
 
 
 [[Taggayt:Ass n dujamber]]
