*Empty MediaWiki Message*

--- a/9_dujamber.mw
+++ b/9_dujamber.mw
@@ -1,14 +1,13 @@
 {{Dujamber}}
-Ass '''9 [[dujamber]]''' d ass {{exp|wis}}343 n useggas ({{exp|wis}}344 deg iseggasen ''bisekstil''). Llan 22 wussan deffir-s ar taggara n useggas.
-<center>[[8 wamber]] - ''9 dujamber'' - [[10 dujamber]]</center>
+Ass '''9 [[dujamber]]''' d ass wis 343 n useggas (wis 344 deg iseggasen ''bisekstil''). Llan 22 wussan deffir-s ar taggara n useggas.
+<center>[[8 dujamber]] - ''9 dujamber'' - [[10 dujamber]]</center>
 
 == Imagraden iqqenen ==
 {{Isenfaṛen nniḍen
 |commons=Category:9 december
 |commons azwel=9 dujamber
 }}
-{{Ass asental}}
-{{Agni Izemzan}}
+{{Months}}
 
 
 [[Taggayt:Ass n dujamber]]
