--- a/25_wamber.mw
+++ b/25_wamber.mw
@@ -1,5 +1,5 @@
 {{wamber}}
-Ass '''25 [[wamber]]''' d ass {{exp|wis}}329 n useggas ({{exp|wis}}330 deg iseggasen ''bisekstil''). Llan 36 wussan deffir-s ar taggara n useggas.
+Ass '''25 [[wamber]]''' d ass wis 329 n useggas (wis 330 deg iseggasen ''bisekstil''). Llan 36 wussan deffir-s ar taggara n useggas.
 <center>[[24 wamber]] - ''25 wamber'' - [[26 wamber]]</center>
 
 == Imagraden iqqenen ==
@@ -7,9 +7,7 @@ Ass '''25 [[wamber]]''' d ass {{exp|wis}}329 n useggas ({{exp|wis}}330 deg isegg
 |commons=Category:25 november
 |commons azwel=25 wamber
 }}
-{{Ass asental}}
-
-{{Agni Izemzan}}
+{{Months}}
 
 
 [[Taggayt:Ass n wamber]]
