*Empty MediaWiki Message*

--- a/26_wamber.mw
+++ b/26_wamber.mw
@@ -1,5 +1,5 @@
 {{wamber}}
-Ass '''26 [[wamber]]''' d ass {{exp|wis}}330 n useggas ({{exp|wis}}331 deg iseggasen ''bisekstil''). Llan 35 wussan deffir-s ar taggara n useggas.
+Ass '''26 [[wamber]]''' d ass wis 330 n useggas (wis 331 deg iseggasen ''bisekstil''). Llan 35 wussan deffir-s ar taggara n useggas.
 <center>[[25 wamber]] - ''26 wamber'' - [[27 wamber]]</center>
 
 == Imagraden iqqenen ==
@@ -7,9 +7,7 @@ Ass '''26 [[wamber]]''' d ass {{exp|wis}}330 n useggas ({{exp|wis}}331 deg isegg
 |commons=Category:26 november
 |commons azwel=26 wamber
 }}
-{{Ass asental}}
-
-{{Agni Izemzan}}
+{{Months}}
 
 
 [[Taggayt:Ass n wamber]]
